--- a/.gitignore
+++ b/.gitignore
@@ -350,3 +350,5 @@ MigrationBackup/
 .ionide/
 /appsettings.Development.json
 /appsettings.json
+/appsettings.Development.json
+/appsettings.Development.json
