--- a/CosmosDB-ChatGPT.csproj
+++ b/CosmosDB-ChatGPT.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>CosmosDB_ChatGPT</RootNamespace>
+    <RootNamespace>cosmosdb_chatgpt</RootNamespace>
     <UserSecretsId>5ddac262-4918-47fb-b308-b8ea810e45b4</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
@@ -12,11 +12,6 @@
   <ItemGroup>
     <PackageReference Include="Azure.AI.OpenAI" Version="1.0.0-beta.4" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.32.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Properties\PublishProfiles\" />
-    <Folder Include="Properties\ServiceDependencies\" />
   </ItemGroup>
 
 </Project>
