--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,10 @@
 			"settings": {
 				"csharp.suppressDotnetRestoreNotification": true,
 				"csharp.suppressDotnetInstallWarning": true,
-				"csharp.suppressBuildAssetsNotification": true
+				"csharp.suppressBuildAssetsNotification": true,
+				"codetour.promptForWorkspaceTours": false,
+				"codetour.recordMode": "pattern",
+				"codetour.showMarkers": false
 			}
 		}
 	}
