Remove docker compose

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
 ARG VARIANT=latest
-FROM mcr.microsoft.com/devcontainers/universal:${VARIANT}
+FROM mcr.microsoft.com/dotnet/sdk:${VARIANT}
 
 RUN dotnet dev-certs https --trust
