--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,11 @@
 {
-	"name": "C# (.NET)",
-	"dockerComposeFile": "docker-compose.yml",
-	"service": "devenv",
-	"workspaceFolder": "/workspace",
+	"name": "Cosmos Chat GPT Blazor Server",
+	"build": {
+		"dockerfile": "Dockerfile",
+		"args": {
+			"VARIANT": "7.0"
+		}
+	},
 	"features": {
 		"ghcr.io/devcontainers/features/azure-cli:1": {
 			"installBicep": true,
