--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Environment-specific app settings
+appsettings.development.json
+appsettings.production.json
+appsettings.*.json
+
 # User-specific files
 *.rsuser
 *.suo
