Update development container's ports and version

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,16 +3,13 @@
 	"build": {
 		"dockerfile": "Dockerfile",
 		"args": {
-			"VARIANT": "7.0"
+			"VARIANT": "7.0.203"
 		}
 	},
-	"forwardPorts": [
-		8100
-	],
 	"portsAttributes": {
 		"8100": {
 			"label": "Blazor web application",
-			"onAutoForward": "openBrowser"
+			"onAutoForward": "openPreview"
 		}
 	},
 	"features": {
