--- a/cosmoschatgpt.csproj
+++ b/cosmoschatgpt.csproj
@@ -6,6 +6,12 @@
     <RootNamespace>Cosmos.Chat.GPT</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <Content Remove="appsettings.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="appsettings.json" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.32.3" />
